@@ -17,6 +17,11 @@
         <!--<org.springdata.neo4j>3.1.1.RELEASE</org.springdata.neo4j>-->
         <stormpath.sdk.version>1.0.RC2</stormpath.sdk.version>
         <stormpath.spring.security.version>0.3.0</stormpath.spring.security.version>
+
+<!--This variable is passed to fd.search to control the log level. Example
+mvn clean install -Dfd.integration=amqp -Dfd.auth.provider=simple -Dfd.logLevel=info
+-->
+        <fd.logLevel>${env.fd.logLevel}</fd.logLevel>
     </properties>
 
     <dependencies>
@@ -74,11 +79,11 @@
             <type>war</type>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.integration</groupId>
-            <artifactId>spring-integration-amqp</artifactId>
-            <version>${org.springintegration.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.integration</groupId>-->
+            <!--<artifactId>spring-integration-amqp</artifactId>-->
+            <!--<version>${org.springintegration.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.rabbitmq</groupId>
@@ -108,6 +113,29 @@
 			<groupId>com.stormpath.spring.security</groupId>
 			<artifactId>stormpath-spring-security-core</artifactId>
 			<version>${stormpath.spring.security.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-aop</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-beans</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-framework</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-expression</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
     </dependencies>
 
@@ -192,6 +220,7 @@
                                     <fd.config>${project.basedir}/src/test/resources/config.properties</fd.config>
                                     <log4j.configuration>file://${project.basedir}/src/test/resources/log4j-search.xml</log4j.configuration>
                                     <java.awt.headless>true</java.awt.headless>
+                                    <fd.logLevel>${fd.logLevel}</fd.logLevel>
                                 </systemProperties>
                             </container>
                             <configuration>
@@ -202,6 +231,7 @@
                                     <cargo.tomcat.ajp.port>9087</cargo.tomcat.ajp.port>
 <!--the debug agent tends to cause a hang when the tomcat instance running fd-search shuts down, so please don't commit with this uncommented -->
                                     <!--<cargo.jvmargs>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs>-->
+                                    <cargo.jvmargs>-Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs>
                                 </properties>
                             </configuration>
                             <deployables>
